Convert object structure
