# models/complication.go
@@ -1,5 +1,3 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
 package models
 
 // This file was generated by the swagger tool.
@@ -25,8 +23,8 @@ type Complication struct {
 	// late toxicity detail
 	LateToxicityDetail *string `json:"late_toxicity_detail,omitempty" db:"late_toxicity_detail"`
 
-	// patient id
-	PatientID *string `json:"patient_id,omitempty" db:"patient_id"`
+	// sample id
+	SampleID *string `json:"sample_id,omitempty" db:"sample_id"`
 
 	// suspected treatment induced neoplasm developed
 	SuspectedTreatmentInducedNeoplasmDeveloped *string `json:"suspected_treatment_induced_neoplasm_developed,omitempty" db:"suspected_treatment_induced_neoplasm_developed"`
