# models/sample.go
@@ -1,5 +1,3 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
 package models
 
 // This file was generated by the swagger tool.
@@ -55,9 +53,6 @@ type Sample struct {
 	// pathology report id
 	PathologyReportID *string `json:"pathology_report_id,omitempty" db:"pathology_report_id"`
 
-	// patient id
-	PatientID *string `json:"patient_id,omitempty" db:"patient_id"`
-
 	// quality control performed
 	QualityControlPerformed *string `json:"quality_control_performed,omitempty" db:"quality_control_performed"`
 
@@ -87,6 +82,29 @@ type Sample struct {
 
 	// units
 	Units *string `json:"units,omitempty" db:"units"`
+
+	Complications []*Complication
+
+	// consent
+	Consents []*Consent
+
+	// diagnosis
+	Diagnosis []*Diagnosis
+
+	// enrollment
+	Enrollments []*Enrollment
+
+	// outcome
+	Outcomes []*Outcome
+
+	// patient
+	Patient *Patient
+
+	// treatment
+	Treatments []*Treatment
+
+	// tumourboard
+	Tumourboards []*Tumourboard
 }
 
 // Validate validates this sample
